frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itams-app-frontend-service
spec:
  selector:
    app: itams-app-frontend
  ports:
  - port: 80
    targetPort: 80
