frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.tejastest.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itams-app-frontend-service
            port: {number: 80}
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: itams-app-backend-service
            port: {number: 3000}
